monitoria/mac323/5-3-24/grades/Victor-Raposo_201334_assignsubmission_file_AllOcurrences.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: Victor-Raposo_201334_assignsubmission_file_AllOcurrences
NOTA: 56
CORREÇÃO AUTOMÁTICA
678 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:10: error: method findAll in class BoyerMoore cannot be applied to given types;
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  required: String,String
  found: String
  reason: actual and formal argument lists differ in length
1 error
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:10: error: method findAll in class BoyerMoore cannot be applied to given types;
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  required: String,String
  found: String
  reason: actual and formal argument lists differ in length
1 error
Compilation Error on Booyer
======= Brute_003 ============

real	0m0.163s
user	0m0.160s
sys	0m0.052s
partially correct (24) 24 linhas certas de 200. primeiro erro: linha 7 difere - operação: 'bbbbabaabbababbaaabbbbababbaabb', esperado: '19 ', encontrado: ''
======= Brute_004 ============

real	0m0.144s
user	0m0.164s
sys	0m0.028s
partially correct (29) 29 linhas certas de 200. primeiro erro: linha 6 difere - operação: 'bahbcajfjcdahbcajfjcdahbcajfjc...bahbcajfjcdahbccahbcajfjcdahbba', esperado: '14 27 37 47 66 ', encontrado: ''
======= Brute_005 ============

real	0m0.145s
user	0m0.176s
sys	0m0.020s
partially correct (25) 25 linhas certas de 200. primeiro erro: linha 1 difere - operação: '200', esperado: '27 ', encontrado: ''
======= KMP_000 ============

real	0m0.151s
user	0m0.164s
sys	0m0.048s
partially correct (200) perfeito
======= KMP_001 ============

real	0m0.163s
user	0m0.196s
sys	0m0.020s
partially correct (200) perfeito
======= KMP_002 ============

real	0m0.159s
user	0m0.184s
sys	0m0.032s
partially correct (200) perfeito
